--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ attrs==22.1.0
 autopep8==1.7.0
 blinker==1.5
 cachetools==5.2.0
+catboost==1.1.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
@@ -22,6 +23,7 @@ GitPython==3.1.29
 google-auth==2.13.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+graphviz==0.20.1
 grpcio==1.50.0
 h5py==3.7.0
 idna==3.4
@@ -42,6 +44,7 @@ opt-einsum==3.3.0
 packaging==21.3
 pandas==1.3.5
 Pillow==9.2.0
+plotly==5.11.0
 protobuf==3.19.6
 pyarrow==10.0.0
 pyasn1==0.4.8
@@ -67,6 +70,7 @@ six==1.16.0
 sklearn==0.0
 smmap==5.0.0
 streamlit==1.14.0
+tenacity==8.1.0
 tensorboard==2.9.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
