--- a/demoaipipelines1.yml
+++ b/demoaipipelines1.yml
@@ -26,7 +26,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      name: demoaiagent1
+      name: demoaiagentpool1
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
