--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ stages:
     displayName: Build
     pool:
       #name: demoselfhostedagent2
-      vmImage: ubuntu-latest
+      vmImage: ubuntu-22.04
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
