--- a/kube-manifests/deployment.yml
+++ b/kube-manifests/deployment.yml
@@ -1,1 +1,21 @@
-
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: streamlit-deployment
+  labels:
+    app: streamlit
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: streamlit
+  template:
+    metadata:
+      labels:
+        app: streamlit
+    spec:
+      containers:
+        - name: streamlit
+          image: demoaicr1.azurecr.io/streamlit
+          ports:
+            - containerPort: 80
