--- a/kube-manifests/service.yml
+++ b/kube-manifests/service.yml
@@ -1,1 +1,13 @@
-
+apiVersion: v1
+kind: Service
+metadata:
+  name: streamlit-loadbalancer-service
+  labels:
+    app: streamlit
+spec:
+  type: LoadBalancer
+  selector:
+    app: streamlit
+  ports:
+    - port: 80
+      targetPort: 80
