--- a/demoai-docker-acr-kubernetes.yml
+++ b/demoai-docker-acr-kubernetes.yml
@@ -70,8 +70,8 @@ stages:
             inputs:
               action: deploy
               manifests: |
-                $(Pipeline.Workspace)/kube-manifests/deployment.yml
-                $(Pipeline.Workspace)/kube-manifests/service.yml
+                $(Pipeline.Workspace)/manifests/deployment.yml
+                $(Pipeline.Workspace)/manifests/service.yml
               imagePullSecrets: |
                 $(imagePullSecret)
               containers: |
